# FireLang_But_Has_Been_Abandoned

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fMain.cc  fMain.cpp  fire-main.cc
JSON/: json.hpp
Sources/fLexer/: fLexer.cc  fLexer.h  fLexer.hpp  fire-lexer.cc  fire-lexer.hpp
Sources/fLib/: global-functions.cc  global-functions.h  global-functions.hpp
Sources/fParser/: AST.cc  AST.h  AST.hpp  Symbol.cc  Symbol.h  Symbol.hpp  fParser.cc  fParser.h  fParser.hpp  syntax-docs.md
Sources/fParser/AST/: ast.cc  ast.h  ast.hpp
Sources/fParser/Parser/: fire-parser.hpp
Sources/fParser/Parsers/: nodes-interface.hpp  primary-node.hpp
Sources/shared/: fire-error.cc  fire-error.hpp  global-functions.cc  global-functions.hpp
Test/: LexerTest.fire
Test/parser-test/: primary-node-test.fire
